--- a/style.css
+++ b/style.css
@@ -92,3 +92,33 @@ li::marker {
 .recipe-prep-list-item span {
 	font-weight: 600;
 }
+
+.recipe-ingredients-container {
+	margin-top: 32px;
+}
+
+.recipe-ingredients-list-header {
+	font-size: 28px;
+	color: hsl(14, 45%, 36%);
+}
+
+.recipe-ingredients-list {
+	margin-top: 16px;
+	line-height: 30px;
+}
+
+.recipe-ingredients-list-item::marker {
+	font-size: 12px;
+}
+
+.recipe-ingredients-list-item {
+	padding-left: 16px;
+	font-family: 'Outfit';
+	color: hsl(30, 10%, 34%);
+	font-weight: 400;
+}
+
+.recipe-breakline {
+	margin: 32px 0;
+	border-top: 2px solid hsl(30, 54%, 90%);
+}
