--- a/style.css
+++ b/style.css
@@ -122,3 +122,65 @@ li::marker {
 	margin: 32px 0;
 	border-top: 2px solid hsl(30, 54%, 90%);
 }
+
+.recipe-instructions-list-header {
+	font-size: 28px;
+	color: hsl(14, 45%, 36%);
+}
+
+.recipe-instructions-list {
+	margin-top: 16px;
+	/* line-height: 30px; */
+	font-family: 'Outfit';
+	color: hsl(30, 10%, 34%);
+}
+
+.recipe-instructions-list span {
+	font-weight: 700;
+}
+
+.recipe-instructions-list-item {
+	padding-left: 16px;
+}
+
+.recipe-instructions-list-item:not(:first-child) {
+	margin-top: 10px;
+}
+
+.recipe-instructions-list-item::marker {
+	font-weight: 600;
+}
+
+.recipe-nutrition-header {
+	font-size: 28px;
+	color: hsl(14, 45%, 36%);
+	margin-bottom: 24px;
+}
+
+.recipe-nutrition-sub-header {
+	font-family: 'Outfit';
+	color: hsl(30, 10%, 34%);
+	font-weight: 500;
+	margin-bottom: 24px;
+}
+
+.recipe-nutrition-category {
+	font-family: 'Outfit';
+	color: hsl(30, 10%, 34%);
+	font-weight: 500;
+	width: 288px;
+	display: inline-block;
+	margin-left: 33px;
+}
+
+.recipe-nutrition-value {
+	display: inline-block;
+	font-family: 'Outfit';
+	color: hsl(14, 45%, 36%);
+	font-weight: 700;
+}
+
+.recipe-nutrition-breakline {
+	margin: 12px;
+	border-top: 2px solid hsl(30, 54%, 90%);
+}
